--- a/src/styles/styles.globals.css
+++ b/src/styles/styles.globals.css
@@ -16,7 +16,7 @@ html {
   height: 100%;
   overflow-y: scroll;
   z-index: -1;
-  background: linear-gradient(45deg, rgb(0 0 0 / 20%), rgba(0, 0, 0, 20%)), url("../../public/images/hero_image.jpg") no-repeat center center 
+  background: linear-gradient(45deg, rgb(0 0 0 / 20%), rgba(0, 0, 0, 0)), url("../../public/images/hero_image.jpg") no-repeat center center 
     fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
